# hybrid-integer-encoding

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/graphs/: component.rs  compressors.rs  context_choice_strategy.rs  context_model.rs  convert.rs  decoder_factories.rs  huffman_graph_decoder.rs  huffman_graph_encoder.rs  huffman_graph_encoder_builder.rs  mod.rs  offsets.rs  parameters.rs  partition.rs  stats.rs  utils.rs
src/graphs/estimator/: fixed_estimator.rs  huffman_estimator.rs  log2_estimator.rs  mod.rs
src/huffman/: common.rs  decoder.rs  encoder.rs  mod.rs  reader.rs
src/utils/: integer_data.rs  mock_writer.rs  mod.rs  stat_writer.rs
tests/: test_compression.rs  test_decoding.rs  test_histogram.rs  test_integer_data.rs
