[package]
name = "hybrid-integer-encoding"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
common_traits = "0.11.0"
dsi-bitstream = "0.4.0"
dsi-progress-logger = "0.2.5"
env_logger = "0.11.5"
epserde = "0.6.1"
sux = "0.4.1"
lender = "0.2.9"
log = "0.4.22"
rand = "0.8.5"
webgraph = { git = "https://github.com/colobrodo/webgraph-rs.git", branch = "bvgraphz" }
zipf = "7.0.1"
